# tims-ollama-bench-fork

./: README.md  pyproject.toml  requirements.txt  setup.py
llm_benchmark/: main.py
llm_benchmark/data/: benchmark_models_16gb_ram.yml
tims_llm_benchmark/: main.py  run_benchmark.py
tims_llm_benchmark/systeminfo/: sysmain.py
